@@ -1,3 +1,14 @@
+2013-05-18 Mark Holland <mark@mark-holland.me.uk>
+
+    * src/pandroid/agent/PandroidAgentListener.java: Changed xml
+    header to UTF-8 encoding.
+
+    * src/pandroid/agent/PandroidAgentTentacle.java: Changed data
+    String to byte array.
+
+    * Pandroid Agent v3.0_UTF8.apk: Added apk that sends xml in
+    utf-8 encoding.
+
 2013-05-16 Mark Holland <mark@mark-holland.me.uk>
 
 	* src/pandroid/agent/PandroidAgentListener.java: Fixed
